# Deploy_cli

./: Dockerfile  README.md  deploy_api.py  docker-compose.yml  proof.pem  pyproject.toml  requirements.txt  worker.py
deploy_pkg/: main.py
deploy_pkg/commands/: command_app_service.py  command_build.py  command_docker_swarm.py  command_init_docker_swarm.py  command_init_service.py  command_landing_service.py  command_portainer_service.py  command_ssh_key_connect.py  command_swarmpit_service.py  command_swarmprom_service.py  command_traefik_service.py  command_vultr_create.py
deploy_pkg/commands/controllers/: create_connection.py  create_file.py  init_service.py  init_swarm.py  install_docker.py  install_docker_compose.py  make_pull.py  run_app.py  setup_github.py  ssh_config.py  vultr_functions.py  vultr_mannage.py
deploy_pkg/commands/deploy/: deploy_app_service.py  deploy_landing_page.py
deploy_pkg/commands/modules/: create_connection.py  create_file.py  create_swarm_file.py  init_portainer_service.py  init_service.py  init_swarm.py  init_swarmpit_service.py  init_swarmprom_service.py  init_traefik_service.py  install_docker.py  install_docker_compose.py  landing_service.py  portainer_service.py  swarmpit_service.py  swarmprom_service.py  traefik_service.py  update_File2.py  update_file1.py
deploy_pkg/commands/templates/: Dockerfile  docker-compose.yml  ssh_config
deploy_pkg/vultr/: main.py
deploy_pkg/vultr/commands/: command_vultr_create.py
deploy_pkg/vultr/commands/controllers/: vultr_mannage.py
