[tool.poetry]
name = "Deploy"
version = "0.1.0"
description = ""
authors ["Evertcolombia @evertcolombia"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.60.1"
celery = "^4.4.6"
uvicorn = "^0.11.6"
typer = "^0.3.1"
aiofiles = "^0.5.0"
fabric = "2.5.0"
paramiko = "2.7.2"
pydantic = "1.6.1"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.mansonry.api"
